--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -104,6 +104,7 @@ stages:
         parameters:
           state: 'success'
           description: 'The build succeeded'
+          path: 'HarrisonSlater/Harri.SchoolDemoAPI.Postman'
     - job: 'GithubPostFailureCommitStatus'
       displayName: 'Failure - Update Github Commit Status'
       condition: failed()
@@ -113,3 +114,4 @@ stages:
         parameters:
           state: 'failure'
           description: 'The build failed'
+          path: 'HarrisonSlater/Harri.SchoolDemoAPI.Postman'
