--- a/pipeline/tasks/rest-github-commit-check.yml
+++ b/pipeline/tasks/rest-github-commit-check.yml
@@ -1,7 +1,8 @@
 parameters:
   state: ''
   description: ''
-  context: 'HarrisonSlater.Harri.SchoolDemoApi'
+  context: ''
+  path: ''
 
 steps:
 - script: 'echo ''{"state":"${{ parameters.state }}","description":"${{ parameters.description }}","context":"${{ parameters.context }}"}'''
@@ -11,6 +12,6 @@ steps:
       -H "Accept: application/vnd.github+json" \
       -H "Authorization: Bearer $(GitHubChecksPAT)" \
       -H "X-GitHub-Api-Version: 2022-11-28" \
-      https://api.github.com/repos/HarrisonSlater/Harri.SchoolDemoAPI/statuses/$(CommitIdForGitHub) \
+      https://api.github.com/repos/${{ parameters.path }}/statuses/$(CommitIdForGitHub) \
       -d \
       '{"state":"${{ parameters.state }}","description":"${{ parameters.description }}","context":"${{ parameters.context }}"}'
