--- a/pipeline/tasks/rest-github-commit-check.yml
+++ b/pipeline/tasks/rest-github-commit-check.yml
@@ -1,17 +1,17 @@
 parameters:
+  commitid: ''
   state: ''
   description: ''
-  context: ''
   path: ''
 
 steps:
-- script: 'echo ''{"state":"${{ parameters.state }}","description":"${{ parameters.description }}","context":"${{ parameters.context }}"}'''
+- script: 'echo ''{"state":"${{ parameters.state }}","description":"${{ parameters.description }}","context":"${{ parameters.path }}"}'''
 - script: |
     curl -L \
       -X POST \
       -H "Accept: application/vnd.github+json" \
       -H "Authorization: Bearer $(GitHubChecksPAT)" \
       -H "X-GitHub-Api-Version: 2022-11-28" \
-      https://api.github.com/repos/${{ parameters.path }}/statuses/$(CommitIdForGitHub) \
+      https://api.github.com/repos/${{ parameters.path }}/statuses/${{ parameters.commitid }} \
       -d \
       '{"state":"${{ parameters.state }}","description":"${{ parameters.description }}","context":"${{ parameters.context }}"}'
