--- a/pipeline/tasks/rest-github-commit-check.yml
+++ b/pipeline/tasks/rest-github-commit-check.yml
@@ -6,6 +6,7 @@ parameters:
 
 steps:
 - script: 'echo ''{"state":"${{ parameters.state }}","description":"${{ parameters.description }}","context":"${{ parameters.path }}"}'''
+  displayName: 'DEBUG - Github status check post body'
 - script: |
     curl -L \
       -X POST \
@@ -14,4 +15,6 @@ steps:
       -H "X-GitHub-Api-Version: 2022-11-28" \
       https://api.github.com/repos/${{ parameters.path }}/statuses/${{ parameters.commitid }} \
       -d \
-      '{"state":"${{ parameters.state }}","description":"${{ parameters.description }}","context":"${{ parameters.context }}"}'
+      '{"state":"${{ parameters.state }}","description":"${{ parameters.description }}","context":"${{ parameters.path }}"}' \
+      --fail
+  displayName: 'GitHub Status check REST API call'
