--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -91,6 +91,7 @@ stages:
       #    publishLocation: 'pipeline'
       
       - task: PublishTestResults@2
+        condition: always()
         inputs:
           testResultsFormat: 'JUnit'
           testResultsFiles: '**/*results.xml'
