Update azure-pipelines.yml for Azure Pipelines

--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -98,6 +98,7 @@ stages:
           failTaskOnFailedTests: true
           failTaskOnFailureToPublishResults: true
           failTaskOnMissingResultsFile: true
+          mergeTestResults: true
           
 - stage: 'PostGithubCommitStatus'
   variables: 
