Update azure-pipelines.yml for Azure Pipelines

--- a/pipeline/azure-pipelines.yml
+++ b/pipeline/azure-pipelines.yml
@@ -99,6 +99,14 @@ stages:
           failTaskOnFailureToPublishResults: true
           failTaskOnMissingResultsFile: true
           searchFolder: newman-reports
+
+      - task: PublishBuildArtifacts@1
+        condition: always()
+        displayName: 'Publish test results and logs artifact'
+        inputs:
+          PathtoPublish: '$(System.DefaultWorkingDirectory)/newman-reports/'
+          ArtifactName: 'newman-reports'
+          publishLocation: 'Container'
           
 - stage: 'PostGithubCommitStatus'
   variables: 
