--- a/newman-folder-runner/package.json
+++ b/newman-folder-runner/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "exports": "./newman-folder-runner.js",
   "bin": {
-	"newman-folder-runner": "./newman-folder-runner.js"
+    "newman-folder-runner": "./newman-folder-runner.js"
   },
   "scripts": {
     "test": "node newman-folder-runner.js"
@@ -16,6 +16,7 @@
   "dependencies": {
     "chalk": "^5.6.0",
     "glob": "^11.0.3",
-    "newman": "^6.2.1"
+    "newman": "^6.2.1",
+    "newman-reporter-junitfull": "^1.1.1"
   }
 }
